@@ -4,14 +4,13 @@ import org.jzy3d.chart.AWTNativeChart;
 import org.jzy3d.colors.Color;
 import org.jzy3d.colors.ColorMapper;
 import org.jzy3d.colors.colormaps.ColorMapRainbow;
-import org.jzy3d.javafx.JavaFXChartFactory;
-import org.jzy3d.javafx.JavaFXRenderer3d;
-import org.jzy3d.javafx.controllers.mouse.JavaFXCameraMouseController;
+import org.jzy3d.javafx.offscreen.JavaFXOffscreenChartFactory;
 import org.jzy3d.maths.Range;
 import org.jzy3d.plot3d.builder.Mapper;
 import org.jzy3d.plot3d.builder.SurfaceBuilder;
 import org.jzy3d.plot3d.primitives.Shape;
 import org.jzy3d.plot3d.rendering.canvas.Quality;
+import com.jogamp.opengl.GLProfile;
 import javafx.application.Application;
 import javafx.scene.Scene;
 import javafx.scene.image.ImageView;
@@ -19,30 +18,28 @@ import javafx.scene.layout.StackPane;
 import javafx.stage.Stage;
 
 /**
- * Showing how to pipe an offscreen Jzy3d chart image to a JavaFX ImageView.
+ * Will require JDK17, Gluon's JavaFX 19 in classpath
  * 
- * {@link JavaFXChartFactory} delivers dedicated {@link JavaFXCameraMouseController} and
- * {@link JavaFXRenderer3d}
+--module-path /Users/martin/Dev/javafx-sdk-19/lib --add-modules javafx.controls -Dnativewindow.debug.JAWT --add-exports=java.desktop/sun.awt=ALL-UNNAMED
  * 
- * Support Rotation control with left mouse button hold+drag Scaling scene using mouse wheel
- * Animation (camera rotation with thread)
  * 
- * TODO : Mouse right click shift Keyboard support (rotate/shift, etc)
  * 
  * @author Martin Pernollet
  */
-public class DemoJzy3dFX extends Application {
+public class DemoJavaFX_Offscreen_Gluon19 extends Application {
   public static void main(String[] args) {
     Application.launch(args);
   }
 
   @Override
   public void start(Stage stage) {
-    stage.setTitle(DemoJzy3dFX.class.getSimpleName());
+    GLProfile.initSingleton();
+    
+    stage.setTitle(DemoJavaFX_Offscreen_Gluon19.class.getSimpleName());
 
     // Jzy3d
-    JavaFXChartFactory factory = new JavaFXChartFactory();
-    AWTNativeChart chart = getDemoChart(factory, "offscreen");
+    JavaFXOffscreenChartFactory factory = new JavaFXOffscreenChartFactory();
+    AWTNativeChart chart = getDemoChart(factory);
     ImageView imageView = factory.bindImageView(chart);
 
     // JavaFX
@@ -52,13 +49,16 @@ public class DemoJzy3dFX extends Application {
     stage.show();
     pane.getChildren().add(imageView);
 
+
     factory.addSceneSizeChangedListener(chart, scene);
 
     stage.setWidth(500);
     stage.setHeight(500);
+    
+
   }
 
-  private AWTNativeChart getDemoChart(JavaFXChartFactory factory, String toolkit) {
+  private AWTNativeChart getDemoChart(JavaFXOffscreenChartFactory factory) {
     // -------------------------------
     // Define a function to plot
     Mapper mapper = new Mapper() {
@@ -83,11 +83,14 @@ public class DemoJzy3dFX extends Application {
     // Create a chart
     Quality quality = Quality.Advanced();
     // quality.setSmoothPolygon(true);
-    // quality.setAnimated(true);
+    //quality.setAnimated(true);
 
     // let factory bind mouse and keyboard controllers to JavaFX node
+    factory.getPainterFactory().setOffscreen(800, 600);
     AWTNativeChart chart = (AWTNativeChart) factory.newChart(quality);
+    //chart.getView().setAxisDisplayed(false);
     chart.getScene().getGraph().add(surface);
+    
     return chart;
   }
 }
